Closed Bug 702475 Opened 13 years ago Closed 13 years ago

delimiter, the third argument of nsTextAddress::ReadRecord and ReadRecordNumber, is not used at all

Categories

(MailNews Core :: Import, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 11.0

People

(Reporter: hiro, Assigned: hiro)

Details

Attachments

(1 file)

      No description provided.
Attached patch Remove itSplinter Review
Attachment #574469 - Flags: review?(dbienvenu)
Assignee: nobody → hiikezoe
Comment on attachment 574469 [details] [diff] [review]
Remove it

thx, looks reasonable.
Attachment #574469 - Flags: review?(dbienvenu) → review+
Keywords: checkin-needed
Status: NEW → ASSIGNED
Checked in: http://hg.mozilla.org/comm-central/rev/2ce3df66398e
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 11.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: