Bug 702475 - delimiter, the third argument of nsTextAddress::ReadRecord and ReadRecordNumber, is not used at all. r=bienvenu